Base service bug fixes